CMAKE_MINIMUM_REQUIRED( VERSION 3.0 ) 
PROJECT( uim342_utils ) 

SET( MAJOR_VERSION 1 )
SET( MINOR_VERSION 0 )
SET( PATCH_VERSION 0 )
SET( RELEASE_VERSION 0 )

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake) 

# Default the install prefix to just /usr
IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  SET( CMAKE_INSTALL_PREFIX /usr CACHE PATH "Default to /usr install" FORCE )
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

SET( VERSION ${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION} )
SET( DEBVERSION ${VERSION}-${RELEASE_VERSION} )

ADD_DEFINITIONS( -DVERSION=${VERSION} )

SET( UIM342_UTILS_SRC
    ${CMAKE_SOURCE_DIR}/src/cli/uim342_utils.cpp
    ${CMAKE_SOURCE_DIR}/src/cli/EventLoop.cpp
    ${CMAKE_SOURCE_DIR}/src/cli/CANRR.cpp
    ${CMAKE_SOURCE_DIR}/src/cli/CmdSequence.cpp
    ${CMAKE_SOURCE_DIR}/src/cli/CNCMachine.cpp
    ${CMAKE_SOURCE_DIR}/src/cli/UIM342Cmd.cpp
    ${CMAKE_SOURCE_DIR}/src/cli/UIM342Machines.cpp
)

SET(CMAKE_BUILD_TYPE Debug)

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/cli )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/include )

ADD_EXECUTABLE( uim342_utils ${UIM342_UTILS_SRC} )
#TARGET_LINK_LIBRARIES( hntestd PRIVATE
#    ${Poco_Util_LIBRARY}
#)

INSTALL( TARGETS uim342_utils DESTINATION ${CMAKE_INSTALL_PREFIX}/bin )

SET( CPACK_GENERATOR "DEB" )

#SET( CPACK_DEB_COMPONENT_INSTALL 1 )
#SET( CPACK_COMPONENTS_ALL daemon )

SET( CPACK_PACKAGE_VERSION_MAJOR ${MAJOR_VERSION} )
SET( CPACK_PACKAGE_VERSION_MINOR ${MINOR_VERSION} )
SET( CPACK_PACKAGE_VERSION_PATCH ${PATCH_VERSION} )

SET( CPACK_PACKAGE_DESCRIPTION "Command line utilities for interacting with UIM342 motion controllers." )
SET( CPACK_PACKAGE_DESCRIPTION_SUMMARY "UIM342 command line utilities" )
SET( CPACK_PACKAGE_CONTACT "Curtis Nottberg" )
SET( CPACK_PACKAGE_ARCHITECTURE DEB-DEFAULT )

SET( CPACK_DEBIAN_PACKAGE_PRIORITY "optional" )
SET( CPACK_DEBIAN_PACKAGE_SECTION "Utilities" )
SET( CPACK_DEBIAN_PACKAGE_MAINTAINER "Curtis Nottberg" ) #required
SET( CPACK_DEBIAN_PACKAGE_VERSION ${DEBVERSION} )
SET( CPACK_DEBIAN_FILE_NAME DEB-DEFAULT )

INCLUDE(CPack)

